# Portfolio-Management-Tool

./: .env  .env.example  .gitignore  AGENTS.md  LLM_PROMPT.md  README.md  User Interface and Functional Requirements_ Portfolio Management Tool.md  analysis_and_prompts.md  plan.md  pyproject.toml  requirements.txt  rxconfig.py  table_column_review_prompt.md
app/: AGENTS.md  README.md  (+5 more)
pmt_core_pkg/: README.md  pyproject.toml
pmt_core_pkg/pmt_core/: __init__.py  exceptions.py
pmt_core_pkg/pmt_core/models/: __init__.py  types.py
pmt_core_pkg/pmt_core/models/common/: __init__.py  enums.py
pmt_core_pkg/pmt_core/models/compliance/: __init__.py  types.py
pmt_core_pkg/pmt_core/models/market_data/: __init__.py  types.py
pmt_core_pkg/pmt_core/models/orders/: __init__.py  types.py
pmt_core_pkg/pmt_core/models/pnl/: __init__.py  types.py
pmt_core_pkg/pmt_core/models/positions/: __init__.py  types.py
pmt_core_pkg/pmt_core/models/risk/: __init__.py  types.py
pmt_core_pkg/pmt_core/repositories/: __init__.py  compliance_repository.py  database_base.py  event_repository.py  operations_repository.py  pnl_repository.py  position_repository.py  protocols.py  recon_repository.py
pmt_core_pkg/pmt_core/repositories/common/: __init__.py
pmt_core_pkg/pmt_core/repositories/compliance/: __init__.py  compliance_repository.py
pmt_core_pkg/pmt_core/repositories/events/: __init__.py  event_repository.py
pmt_core_pkg/pmt_core/repositories/operations/: __init__.py  operations_repository.py
pmt_core_pkg/pmt_core/repositories/pnl/: __init__.py  pnl_repository.py
pmt_core_pkg/pmt_core/repositories/positions/: __init__.py  position_repository.py
pmt_core_pkg/pmt_core/repositories/recon/: __init__.py  recon_repository.py
pmt_core_pkg/pmt_core/resources/: __init__.py
pmt_core_pkg/pmt_core/services/: __init__.py  compliance_service.py  pnl_service.py  position_service.py  pricing_service.py
pmt_core_pkg/pmt_core/services/compliance/: __init__.py  compliance_service.py
pmt_core_pkg/pmt_core/services/emsx/: __init__.py  emsx_service.py
pmt_core_pkg/pmt_core/services/events/: __init__.py  event_calendar_service.py  event_stream_service.py  reverse_inquiry_service.py
pmt_core_pkg/pmt_core/services/instruments/: __init__.py  instruments_service.py
pmt_core_pkg/pmt_core/services/market_data/: __init__.py  market_data_service.py
pmt_core_pkg/pmt_core/services/notifications/: __init__.py  notification_constants.py  notification_providers.py  notification_registry.py  notification_service.py
pmt_core_pkg/pmt_core/services/operations/: __init__.py  operations_service.py
pmt_core_pkg/pmt_core/services/performance/: __init__.py  performance_service.py
pmt_core_pkg/pmt_core/services/pnl/: __init__.py  pnl_service.py
pmt_core_pkg/pmt_core/utilities/: __init__.py  config_loader.py
pmt_core_pkg/tests_core/: __init__.py  conftest.py  test_init.py
pmt_core_pkg/tests_core/smoke/: README.md
pmt_core_pkg/tests_core/unit/: test_models.py  test_services.py
reflex-ui-starter/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  rxconfig.py
reflex-ui-starter/.agents/rules/: superpowers.md
reflex-ui-starter/.agents/workflows/: run-dev.md
reflex-ui-starter/assets/: notification_highlight.css
reflex-ui-starter/core_pkg/: README.md  pyproject.toml
reflex-ui-starter/core_pkg/core/: __init__.py
reflex-ui-starter/core_pkg/tests_core/: test_analytics_service.py  test_config_service.py  test_fx_service.py  test_notification_service.py  test_reference_data_service.py  test_user_service.py
reflex-ui-starter/docs/: index.md
reflex-ui-starter/docs/setups/: development-setup.md
reflex-ui-starter/docs/style_guides/: reflex-architecture-guide.md
reflex-ui-starter/reflex_ag_grid/: README.md  __init__.py  pyproject.toml
reflex-ui-starter/reflex_ag_grid/components/: ag_grid_state.py
reflex-ui-starter/reflex_ag_grid/docs/: 03_cell_flash.md  04_jump_highlight.md  06_notifications.md  07_validation.md  08_clipboard.md  10_websocket.md  14_background_tasks.md  15_column_state.md  17_tree_data.md  19_status_bar.md  20_overlays.md  22_advanced_filter.md  23_set_filter.md  25_row_numbers.md  26_quick_filter.md  README.md  migration_guide.md  performance.md
reflex-ui-starter/reflex_ag_grid/examples/: __init__.py  basic_grid.py
reflex-ui-starter/reflex_ag_grid/models/: __init__.py  column_def.py  validation.py
reflex-ui-starter/reflex_ag_grid/tests/: setup_browsers.py  test_serialization.py
reflex-ui-starter/reflex_ag_grid/todos/: ag_grid_feature_gaps.md
reflex-ui-starter/starter_app/: ag_grid_constants.py  constants.py  starter_app.py
reflex-ui-starter/starter_app/services/: __init__.py
reflex_ag_grid/examples/demo_app/: .gitignore  README.md  pyproject.toml  requirements.txt  rxconfig.py
(+664 files in other folders)
