[project]
name = "portfolio-management-tool"
version = "0.1.0"
description = "A professional portfolio management web dashboard built with Reflex"
requires-python = ">=3.11,<3.14"
dependencies = [
    "reflex==0.8.20",
    "yfinance",
    "PyGithub",
    "pyodbc",
    "python-dotenv",
    "pandas",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]


[dependency-groups]
dev = []

[tool.reflex]
app_name = "app"
