[project]
name = "portfolio-management-tool"
version = "0.1.0"
description = "A professional portfolio management web dashboard built with Reflex"
requires-python = ">=3.11,<3.14"
dependencies = [
    "reflex==0.8.26",
    "yfinance",
    "PyGithub",
    "pyodbc",
    "python-dotenv",
    "pandas",
    "pmt-core",
    "reflex-ag-grid",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv.sources]
pmt-core = { path = "./pmt_core_pkg", editable = true }
reflex-ag-grid = { workspace = true }

[tool.uv.workspace]
members = ["reflex_ag_grid"]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests", "pmt_core_pkg/tests_core"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.reflex]
app_name = "app"
