[project]
name = "reflex-ag-grid"
version = "0.1.0"
description = "AG Grid component for Reflex framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reflex>=0.8.26",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Since pyproject.toml is inside reflex_ag_grid/, the package is the current directory
# Hatch will detect __init__.py and make this an importable package as "reflex_ag_grid"
include = [
    "*.py",
    "components/*.py",
    "models/*.py",
]

[tool.hatch.build.targets.wheel.force-include]
"." = "reflex_ag_grid"
